Fix header z-index (#128)

--- a/src/elements/header.module.scss
+++ b/src/elements/header.module.scss
@@ -19,7 +19,7 @@
     backdrop-filter: saturate(200%) blur(8px);
     border-bottom: 1px solid var(--line-color);
     position: fixed;
-    z-index: 1;
+    z-index: 50;
     top: 0;
     left: 0;
     width: 100%;
